feat: migrate UI from Swing to JavaFX with modern dashboard layout
- Convert Main.java to JavaFX Application with AppShell integration
- Implement BorderPane-based AppShell for sidebar + content layout
- Create NavigationSidebar with styled navigation buttons
- Migrate AssessmentUI to JavaFX with skill evaluation form
- Convert TaskBoardUI to Kanban-style onboarding board (4 columns)
- Transform ManagerDashboardUI to analytics card dashboard
- Update AuditLogUI with JavaFX TextArea viewer
- Fix deprecated Runtime.exec() in CppBridge using ProcessBuilder